# bln_log

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/bln_log/: bln_log.h  log.hpp
